# lombie

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
lombie/: CMakeLists.txt  Camera.cpp  Camera.h  Player.cpp  Player.h  World.cpp  World.h  imgui.ini  main.cpp
lombie/ASCII/: Char.cpp  Char.h  ContextMenuPlate.cpp  ContextMenuPlate.h  DebugPlate.cpp  DebugPlate.h  InventoryPlate.cpp  InventoryPlate.h  Plate.cpp  Plate.h  PlateRenderer.cpp  PlateRenderer.h  UIPlate.cpp  UIPlate.h
lombie/Actions/: EatAction.cpp  EatAction.h  IAction.h  LootAction.cpp  LootAction.h  WalkAction.cpp  WalkAction.h
lombie/Core/: FileSystem.cpp  FileSystem.h  Globals.cpp  Globals.h  InputManager.cpp  InputManager.h
lombie/Inventory/: Entity.h  IItem.h  Inventory.cpp  Inventory.h
lombie/resources/shaders/: ascii.frag.glsl  ascii.vert.glsl
